--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jwasilgeo/esri-jsapi-and-angular-whats-next-dev-summit-2016#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-connect": "^0.2.0",
     "grunt-gh-pages": "^1.0.0"
   },
   "dependencies": {}
